--- a/getTransactions/package.json
+++ b/getTransactions/package.json
@@ -11,6 +11,7 @@
   "author": "Jet",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-preset-node6": "^11.0.0",
     "telegraf": "^3.21.2",
     "xmlhttprequest": "^1.8.0"
