--- a/getTransactions/package.json
+++ b/getTransactions/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel src -d lib",
-    "start": "node ./node_modules/babel-cli/bin/babel-node.js app"
+    "start": "node ./node_modules/babel-cli/bin/babel-node.js ./src"
   },
   "author": "Jet",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
     "babel-preset-node6": "^11.0.0",
+    "dotenv": "^6.0.0",
     "telegraf": "^3.21.2",
     "xmlhttprequest": "^1.8.0"
   },
