--- a/telegramBot/package.json
+++ b/telegramBot/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "babel-register": "^6.26.0",
+    "dotenv": "^6.0.0",
     "telegraf": "^3.21.2"
   },
   "devDependencies": {
